--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <head>
         <title>Jeu de la vie</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <style media="screen">
+          tr {
+            border: none;
+          }
+          td {
+            border: none;
+            height: 10px;
+            width: 10px;
+          }
+          .alive {
+            background-color: black;
+          }
+          .dead {
+            background-color: grey;
+          }
+        </style>
     </head>
     <body>
-        <script src="game.js"></script>
+      <table id="grid"></table>
+      <script src="game.js"></script>
     </body>
 </html>
